# printf2

./: CMakeLists.txt  Makefile  a.out  ft_parser.c  ft_parser_utils.c  ft_print_d_c.c  ft_print_p_u.c  ft_print_x_xup_s.c  ft_printf.c  ft_printf.h  ft_printf_utils.c  ft_processor.c  ft_putchar1.c  main.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isprint.c  ft_itoa.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_numlen.c  ft_numlen_unsigned.c  ft_putchar.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnbr_unsigned.c  ft_putstr.c  ft_putstrn.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strrev.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  libft.h
